--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,8 +7,13 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
+            {% if msg_sent: %}
+            <h1>Successfully sent your message!</h1>
+            <span class="subheading">I'll get back to you as soon as I can! Feel free to shoot me another one.</span>
+            {% else: %}
             <h1>Contact Me</h1>
             <span class="subheading">Have questions? I have answers.</span>
+            {% endif %}
           </div>
         </div>
       </div>
