--- a/templates/contact.html
+++ b/templates/contact.html
@@ -28,8 +28,8 @@
         <!-- Contact Form - Enter your email address on line 19 of the mail/contact_me.php file to make this form work. -->
         <!-- WARNING: Some web hosts do not allow emails to be sent through forms to common mail hosts like Gmail or Yahoo. It's recommended that you use a private domain email address! -->
         <!-- To use the contact form, your site must be on a live web host with PHP! The form will not work locally! -->
-<!--        action="{{ url_for(receive_data) }}"-->
-        <form method="post" name="sentMessage" id="contactForm" novalidate>
+<!--        action="{{ url_for(receive_data) }}" method="post"-->
+        <form name="sentMessage" id="contactForm" novalidate>
           <div class="control-group">
             <div class="form-group floating-label-form-group controls">
               <label>Name</label>
