Updated href for contact page in the header template

--- a/templates/header.html
+++ b/templates/header.html
@@ -54,7 +54,8 @@
             <a class="nav-link" href="{{ url_for('about') }}">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('contact') }}">Contact</a>
+            <a class="nav-link" href="/contact">Contact</a>
+<!--            {{ url_for('contact') }}-->
           </li>
         </ul>
       </div>
